src/tclx/src/y.output
Terminals unused in grammar

   ID


Grammar

    0 $accept: timedate $end

    1 timedate: %empty
    2         | timedate item

    3 item: tspec
    4     | zone
    5     | dtspec
    6     | dyspec
    7     | rspec
    8     | nspec

    9 nspec: NUMBER

   10 tspec: NUMBER MERIDIAN
   11      | NUMBER ':' NUMBER
   12      | NUMBER ':' NUMBER MERIDIAN
   13      | NUMBER ':' NUMBER NUMBER
   14      | NUMBER ':' NUMBER ':' NUMBER
   15      | NUMBER ':' NUMBER ':' NUMBER MERIDIAN
   16      | NUMBER ':' NUMBER ':' NUMBER NUMBER

   17 zone: ZONE
   18     | DAYZONE

   19 dyspec: DAY
   20       | DAY ','
   21       | NUMBER DAY

   22 dtspec: NUMBER '/' NUMBER
   23       | NUMBER '/' NUMBER '/' NUMBER
   24       | MONTH NUMBER
   25       | MONTH NUMBER ',' NUMBER
   26       | NUMBER MONTH
   27       | NUMBER MONTH NUMBER

   28 rspec: NUMBER UNIT
   29      | NUMBER MUNIT
   30      | NUMBER SUNIT
   31      | UNIT
   32      | MUNIT
   33      | SUNIT
   34      | rspec AGO


Terminals, with rules where they appear

$end (0) 0
',' (44) 20 25
'/' (47) 22 23
':' (58) 11 12 13 14 15 16
error (256)
ID (258)
MONTH (259) 24 25 26 27
DAY (260) 19 20 21
MERIDIAN (261) 10 12 15
NUMBER (262) 9 10 11 12 13 14 15 16 21 22 23 24 25 26 27 28 29 30
UNIT (263) 28 31
MUNIT (264) 29 32
SUNIT (265) 30 33
ZONE (266) 17
DAYZONE (267) 18
AGO (268) 34
LOWER_THAN_NUMBER (269)


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
timedate (19)
    on left: 1 2, on right: 0 2
item (20)
    on left: 3 4 5 6 7 8, on right: 2
nspec (21)
    on left: 9, on right: 8
tspec (22)
    on left: 10 11 12 13 14 15 16, on right: 3
zone (23)
    on left: 17 18, on right: 4
dyspec (24)
    on left: 19 20 21, on right: 6
dtspec (25)
    on left: 22 23 24 25 26 27, on right: 5
rspec (26)
    on left: 28 29 30 31 32 33 34, on right: 7 34


State 0

    0 $accept: . timedate $end

    $default  reduce using rule 1 (timedate)

    timedate  go to state 1


State 1

    0 $accept: timedate . $end
    2 timedate: timedate . item

    $end     shift, and go to state 2
    MONTH    shift, and go to state 3
    DAY      shift, and go to state 4
    NUMBER   shift, and go to state 5
    UNIT     shift, and go to state 6
    MUNIT    shift, and go to state 7
    SUNIT    shift, and go to state 8
    ZONE     shift, and go to state 9
    DAYZONE  shift, and go to state 10

    item    go to state 11
    nspec   go to state 12
    tspec   go to state 13
    zone    go to state 14
    dyspec  go to state 15
    dtspec  go to state 16
    rspec   go to state 17


State 2

    0 $accept: timedate $end .

    $default  accept


State 3

   24 dtspec: MONTH . NUMBER
   25       | MONTH . NUMBER ',' NUMBER

    NUMBER  shift, and go to state 18


State 4

   19 dyspec: DAY .
   20       | DAY . ','

    ','  shift, and go to state 19

    $default  reduce using rule 19 (dyspec)


State 5

    9 nspec: NUMBER .
   10 tspec: NUMBER . MERIDIAN
   11      | NUMBER . ':' NUMBER
   12      | NUMBER . ':' NUMBER MERIDIAN
   13      | NUMBER . ':' NUMBER NUMBER
   14      | NUMBER . ':' NUMBER ':' NUMBER
   15      | NUMBER . ':' NUMBER ':' NUMBER MERIDIAN
   16      | NUMBER . ':' NUMBER ':' NUMBER NUMBER
   21 dyspec: NUMBER . DAY
   22 dtspec: NUMBER . '/' NUMBER
   23       | NUMBER . '/' NUMBER '/' NUMBER
   26       | NUMBER . MONTH
   27       | NUMBER . MONTH NUMBER
   28 rspec: NUMBER . UNIT
   29      | NUMBER . MUNIT
   30      | NUMBER . SUNIT

    MONTH     shift, and go to state 20
    DAY       shift, and go to state 21
    MERIDIAN  shift, and go to state 22
    UNIT      shift, and go to state 23
    MUNIT     shift, and go to state 24
    SUNIT     shift, and go to state 25
    ':'       shift, and go to state 26
    '/'       shift, and go to state 27

    $default  reduce using rule 9 (nspec)


State 6

   31 rspec: UNIT .

    $default  reduce using rule 31 (rspec)


State 7

   32 rspec: MUNIT .

    $default  reduce using rule 32 (rspec)


State 8

   33 rspec: SUNIT .

    $default  reduce using rule 33 (rspec)


State 9

   17 zone: ZONE .

    $default  reduce using rule 17 (zone)


State 10

   18 zone: DAYZONE .

    $default  reduce using rule 18 (zone)


State 11

    2 timedate: timedate item .

    $default  reduce using rule 2 (timedate)


State 12

    8 item: nspec .

    $default  reduce using rule 8 (item)


State 13

    3 item: tspec .

    $default  reduce using rule 3 (item)


State 14

    4 item: zone .

    $default  reduce using rule 4 (item)


State 15

    6 item: dyspec .

    $default  reduce using rule 6 (item)


State 16

    5 item: dtspec .

    $default  reduce using rule 5 (item)


State 17

    7 item: rspec .
   34 rspec: rspec . AGO

    AGO  shift, and go to state 28

    $default  reduce using rule 7 (item)


State 18

   24 dtspec: MONTH NUMBER .
   25       | MONTH NUMBER . ',' NUMBER

    ','  shift, and go to state 29

    $default  reduce using rule 24 (dtspec)


State 19

   20 dyspec: DAY ',' .

    $default  reduce using rule 20 (dyspec)


State 20

   26 dtspec: NUMBER MONTH .
   27       | NUMBER MONTH . NUMBER

    NUMBER  shift, and go to state 30

    $default  reduce using rule 26 (dtspec)


State 21

   21 dyspec: NUMBER DAY .

    $default  reduce using rule 21 (dyspec)


State 22

   10 tspec: NUMBER MERIDIAN .

    $default  reduce using rule 10 (tspec)


State 23

   28 rspec: NUMBER UNIT .

    $default  reduce using rule 28 (rspec)


State 24

   29 rspec: NUMBER MUNIT .

    $default  reduce using rule 29 (rspec)


State 25

   30 rspec: NUMBER SUNIT .

    $default  reduce using rule 30 (rspec)


State 26

   11 tspec: NUMBER ':' . NUMBER
   12      | NUMBER ':' . NUMBER MERIDIAN
   13      | NUMBER ':' . NUMBER NUMBER
   14      | NUMBER ':' . NUMBER ':' NUMBER
   15      | NUMBER ':' . NUMBER ':' NUMBER MERIDIAN
   16      | NUMBER ':' . NUMBER ':' NUMBER NUMBER

    NUMBER  shift, and go to state 31


State 27

   22 dtspec: NUMBER '/' . NUMBER
   23       | NUMBER '/' . NUMBER '/' NUMBER

    NUMBER  shift, and go to state 32


State 28

   34 rspec: rspec AGO .

    $default  reduce using rule 34 (rspec)


State 29

   25 dtspec: MONTH NUMBER ',' . NUMBER

    NUMBER  shift, and go to state 33


State 30

   27 dtspec: NUMBER MONTH NUMBER .

    $default  reduce using rule 27 (dtspec)


State 31

   11 tspec: NUMBER ':' NUMBER .
   12      | NUMBER ':' NUMBER . MERIDIAN
   13      | NUMBER ':' NUMBER . NUMBER
   14      | NUMBER ':' NUMBER . ':' NUMBER
   15      | NUMBER ':' NUMBER . ':' NUMBER MERIDIAN
   16      | NUMBER ':' NUMBER . ':' NUMBER NUMBER

    MERIDIAN  shift, and go to state 34
    NUMBER    shift, and go to state 35
    ':'       shift, and go to state 36

    $default  reduce using rule 11 (tspec)


State 32

   22 dtspec: NUMBER '/' NUMBER .
   23       | NUMBER '/' NUMBER . '/' NUMBER

    '/'  shift, and go to state 37

    $default  reduce using rule 22 (dtspec)


State 33

   25 dtspec: MONTH NUMBER ',' NUMBER .

    $default  reduce using rule 25 (dtspec)


State 34

   12 tspec: NUMBER ':' NUMBER MERIDIAN .

    $default  reduce using rule 12 (tspec)


State 35

   13 tspec: NUMBER ':' NUMBER NUMBER .

    $default  reduce using rule 13 (tspec)


State 36

   14 tspec: NUMBER ':' NUMBER ':' . NUMBER
   15      | NUMBER ':' NUMBER ':' . NUMBER MERIDIAN
   16      | NUMBER ':' NUMBER ':' . NUMBER NUMBER

    NUMBER  shift, and go to state 38


State 37

   23 dtspec: NUMBER '/' NUMBER '/' . NUMBER

    NUMBER  shift, and go to state 39


State 38

   14 tspec: NUMBER ':' NUMBER ':' NUMBER .
   15      | NUMBER ':' NUMBER ':' NUMBER . MERIDIAN
   16      | NUMBER ':' NUMBER ':' NUMBER . NUMBER

    MERIDIAN  shift, and go to state 40
    NUMBER    shift, and go to state 41

    $default  reduce using rule 14 (tspec)


State 39

   23 dtspec: NUMBER '/' NUMBER '/' NUMBER .

    $default  reduce using rule 23 (dtspec)


State 40

   15 tspec: NUMBER ':' NUMBER ':' NUMBER MERIDIAN .

    $default  reduce using rule 15 (tspec)


State 41

   16 tspec: NUMBER ':' NUMBER ':' NUMBER NUMBER .

    $default  reduce using rule 16 (tspec)
